--- a/src/css/index.css
+++ b/src/css/index.css
@@ -22,9 +22,69 @@ body, html {
   width: 100%;
   height: 50px;
   background: #53ab3a;
+  display: flex;
+  text-align: center;
+  line-height: 50px;
+}
+
+.header p:nth-child(1) {
+  color: white;
+  flex: 1;
+}
+
+.header p:nth-child(2) {
+  color: white;
+  flex: 8;
 }
 
 .main {
   width: 100%;
   flex: 1;
+}
+
+.main .lbt {
+  width: 100%;
+  height: 120px;
+  background: red;
+}
+
+.main .lbt .swiper-container {
+  width: 100%;
+  height: 100%;
+}
+
+.main .lbt .swiper-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.main .pic {
+  width: 100%;
+  height: 180px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.main .pic dl {
+  flex: 1;
+  width: 60px;
+  height: 80px;
+  margin: 3px;
+}
+
+.main .pic dl dd {
+  width: 60px;
+  height: 60px;
+  margin: 0 auto;
+}
+
+.main .pic dl dd img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.main .pic dl dt {
+  text-align: center;
+  font-size: 12px;
 }
