--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -19,10 +19,58 @@ body,html{
     width: 100%;
     height: 50px;
     background: #53ab3a;
+    display: flex;
+    text-align: center;
+    line-height: 50px;
+    p:nth-child(1){
+        color: white;
+        flex:1;
+    }
+    p:nth-child(2){
+        color: white;
+        flex:8;
+    }
 }
 .main{
     width: 100%;
     flex: 1;
-  
-
+    .lbt{
+        width: 100%;
+        height:120px;
+        background: red; 
+        .swiper-container{
+            width: 100%;
+            height: 100%;
+            img{
+                width: 100%;
+                height: 100%; 
+            }
+        }
+    }
+    .pic{
+        width: 100%;
+        height: 180px;
+        display: flex;
+        flex-wrap: wrap;
+        dl{
+            flex: 1;
+            width: 60px;
+            height: 80px;
+            margin:3px;
+            dd{
+                width: 60px;
+                height: 60px;
+                margin:0 auto;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 50%;
+                }
+            }
+            dt{
+                text-align: center;
+                font-size: 12px;
+            }
+        }
+    }
 }
