--- a/src/css/index.css
+++ b/src/css/index.css
@@ -40,6 +40,7 @@ body, html {
 .main {
   width: 100%;
   flex: 1;
+  overflow: hidden;
 }
 
 .main .lbt {
@@ -87,4 +88,35 @@ body, html {
 .main .pic dl dt {
   text-align: center;
   font-size: 12px;
+}
+
+.main .big {
+  width: 100%;
+  height: 100%;
+}
+
+.main .big dl {
+  width: 100%;
+  height: 120px;
+  display: flex;
+}
+
+.main .big dl dd {
+  width: 120px;
+  height: 120px;
+  flex: 1;
+}
+
+.main .big dl dd img {
+  width: 100%;
+  height: 100%;
+  padding: 3px;
+}
+
+.main .big dl dt {
+  flex: 1;
+}
+
+.main .big dl dt p {
+  margin: 8px 3px;
 }
