--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -34,6 +34,7 @@ body,html{
 .main{
     width: 100%;
     flex: 1;
+    overflow: hidden;
     .lbt{
         width: 100%;
         height:120px;
@@ -70,6 +71,31 @@ body,html{
             dt{
                 text-align: center;
                 font-size: 12px;
+            }
+        }
+    }
+    .big{
+        width: 100%;
+        height: 100%;
+        dl{
+            width: 100%;
+            height: 120px;
+            display: flex;
+            dd{
+                width:120px;
+                height: 120px;
+                flex: 1;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    padding: 3px;
+                }
+            }
+            dt{
+                flex: 1;
+                p{
+                    margin:8px 3px;
+                }
             }
         }
     }
